fixed margin/padding added gap to main container

--- a/components/AddingTask/AddingTask.module.css
+++ b/components/AddingTask/AddingTask.module.css
@@ -1,16 +1,16 @@
 .addingTask {
   display: grid;
   gap: 16px;
-  width: 80%;
+  width: 100%;
   max-width: 700px;
   background-color: #FFFFFF;
   border-radius: 10px;
   position: relative;
-  margin: 55px 24px 77px 24px;
 }
 
 @media screen and (min-width: 768px) {
   .addingTask {
+    width: 80%;
     gap: 20px;
   }
 }
