--- a/components/Input/Input.module.css
+++ b/components/Input/Input.module.css
@@ -4,4 +4,5 @@
   color: #3A4374;
   border-radius: 5px;
   border: none;
+  padding: 0 16px;
 }
