--- a/components/TaskCard/TaskCard.module.css
+++ b/components/TaskCard/TaskCard.module.css
@@ -2,15 +2,15 @@
   display: grid;
   gap: 16px;
   background: #FFFFFF;
-  width: 80%;
+  width: 100%;
   max-width: 700px;
   min-height: 175px;
-  border-radius: 10px;
-  margin: 24px 32px 24px 16px;
+  border-radius: 10px; 
 }
 
 @media screen and (min-width: 768px) {
   .taskCard {
+    width: 80%;
     gap: 20px;
   }
 }
