--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  /* padding: 6rem; */
+  gap: 24px;
   min-height: 100vh;
 }
 
